--- a/style.css
+++ b/style.css
@@ -266,3 +266,75 @@ background-color: #F0F0F0;
 
 
 
+
+.popupk {
+    text-align:center;
+    display: none;
+    position: fixed;
+    padding: 30px;
+    width: 450px;
+    left: 45%;
+    margin-left: -150px;
+    height: 200px;
+    top: 40%;
+    background: #FFF;
+    z-index: 20;
+  }
+
+  #popupk:after {
+    position: fixed;
+    content: "";
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: rgba(0,0,0,0.5);
+    z-index: -2;
+  }
+
+  #popupk:before {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: #FFF;
+    z-index: -1;
+  }
+
+  .popupkk {
+    text-align:center;
+    display: none;
+    position: fixed;
+    padding: 30px;
+    width: 350px;
+    left: 45%;
+    margin-left: -150px;
+    height: 150px;
+    top: 40%;
+    background: #FFF;
+    z-index: 20;
+  }
+
+  #popupkk:after {
+    position: fixed;
+    content: "";
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: rgba(0,0,0,0.5);
+    z-index: -2;
+  }
+
+  #popupkk:before {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: #FFF;
+    z-index: -1;
+  }
